--- a/src/posts/js-code-journey.mdx
+++ b/src/posts/js-code-journey.mdx
@@ -8,12 +8,9 @@ author: You
 
 There are 3 phases in which JS code is executed.
 
-* Parsing
-    
-* Compilation
-    
-* Execution
-    
+- Parsing
+- Compilation
+- Execution
 
 ## Parsing
 
@@ -23,23 +20,17 @@ AST is used by bytecode generator to form byte code which in turn is used by int
 
 There are two types of parsers and they are lazy parsers and eager parser.
 
-Eager parser does following things:
+#### Eager parser does following things:
 
-* Used for parsing functions we want to compile
-    
-* Builds AST
-    
-* Builds Scope
-    
-* Finds all syntax errors
-    
+- Used for parsing functions we want to compile
+- Builds AST
+- Builds Scope
+- Finds all syntax errors
 
-Lazy parser does following things:
+#### Lazy parser does following things:
 
-* Used for skipping functions we do not want to compile
-    
-* Find a restricted set of errors
-    
+- Used for skipping functions we do not want to compile
+- Find a restricted set of errors
 
 To give an example, IIFE would be parsed by eager parser and other functions are parsed by lazy parser. Lazy parser parses function body of a function and when that function is invoked it is eager parsed and compiled later.
 
@@ -57,11 +48,11 @@ JavaScript was Interpreted language by design. Interpreter is something which ex
 
 Generally modern browsers will have two compilers a base line compiler and a optimizing compiler. If some part of code is getting run repeatedly, it will be passed to optimizing compiler which will optimize that code for faster running. Optimizing compiler uses previously seen type information (don't change type!)
 
-![jsengine.png](https://cdn.hashnode.com/res/hashnode/image/upload/v1639500943152/nJ7nfKD_e.png align="left")
+<div style={{ margin: "1rem auto" }}>
+  <Image src="/js-engine.png" width={500} height={500} alt="js engine" />
+</div>
 
 Reused functions are marked as "hot"
-
-%[https://giphy.com/gifs/usnationalarchives-skateboarding-archivesgif-surefootin-Sr8dN4GfSwsbHW4Rap] 
 
 ## Execution
 
@@ -69,16 +60,15 @@ Compilation and execution phase happen hand in hand really. When Interpreter is 
 
 Execution is done in two phases:
 
-* Memory Allocation Phase
-    
-* Code Execution Phase
-    
+- Memory Allocation Phase
+- Code Execution Phase
 
-```plaintext
+```js
 var n = 2; // 1
 
-function square(n) { // 2
-  var ans = n * n;  // 3
+function square(n) {
+  // 2
+  var ans = n * n; // 3
   return ans; // 4
 } // 5
 
@@ -89,9 +79,9 @@ Let's have a look at above code example, In memory execution phase memory is all
 
 Now the state of variables are,
 
-```plaintext
-num = undefined
-squareofTwo = undefined
+```js
+num = undefined;
+squareofTwo = undefined;
 ```
 
 ### Execution Context
@@ -100,26 +90,18 @@ Memory allocation in above example is happening in global execution context. Whe
 
 Now moving forward,
 
-* In code execution phase, on line 1, value 2 is assigned to variable. Line 2, 3, 4 are skipped.
-    
-* On line 6 call to the function square will be made and new execution context will be created.
-    
-* Memory will be assigned to variable ans with value undefined and in code execution phase value of ans will be calculated and assigned.
-    
-* Line 4 will return the control to the global execution context with value 4 which will be assigned to variable squareofTwo.
-    
+- In code execution phase, on line 1, value 2 is assigned to variable. Line 2, 3, 4 are skipped.
+- On line 6 call to the function square will be made and new execution context will be created.
+- Memory will be assigned to variable ans with value undefined and in code execution phase value of ans will be calculated and assigned.
+- Line 4 will return the control to the global execution context with value 4 which will be assigned to variable squareofTwo.
 
 And that is how JavaScript code is executed. This example is pretty small but you can apply this train of thoughts to any code snippet and you will have a good mental model of the code execution.
 
 The talks and article I referred are mentioned below
 
-* [Parser](https://youtu.be/Fg7niTmNNLg)
-    
-* [Compilation](https://youtu.be/p-iiEDtpy6I)
-    
-* [Execution](https://youtu.be/iLWTnMzWtj4)
-    
-* [JIT](https://blog.bitsrc.io/the-jit-in-javascript-just-in-time-compiler-798b66e44143)
-    
+- [Parser](https://youtu.be/Fg7niTmNNLg)
+- [Compilation](https://youtu.be/p-iiEDtpy6I)
+- [Execution](https://youtu.be/iLWTnMzWtj4)
+- [JIT](https://blog.bitsrc.io/the-jit-in-javascript-just-in-time-compiler-798b66e44143)
 
 I hope it was a good read. Thanks for reading! Until next time 👋
