--- a/src/posts/js-code-journey.mdx
+++ b/src/posts/js-code-journey.mdx
@@ -63,7 +63,7 @@ Execution is done in two phases:
 - Memory Allocation Phase
 - Code Execution Phase
 
-```js
+```js showLineNumbers {9}
 var n = 2; // 1
 
 function square(n) {
