Added contentlayer, implemented app dir and remove post dir

--- a/src/content/posts/closure-in-js.mdx
+++ b/src/content/posts/closure-in-js.mdx
@@ -74,8 +74,9 @@ In the above example, _fncall_ holds function called _inner_ as a value which is
 
 The output of above code snippet is as follows.
 
-<div style={{ margin: "1rem auto" }}>
+<div>
   <Image
+    className="rounded-md my-4 mx-auto"
     src="/closure-blog-1.png"
     width={500}
     height={500}
